enable put delete and post routes
